--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "contao-bundle",
     "description": "Contao 4 secure accessdata bundle",
     "keywords": ["password", "secure", "safe", "encrypted"],
+    "homepage":"https://craffft.de",
     "license": "MIT",
     "authors": [
         {
@@ -15,20 +16,22 @@
         "source": "https://github.com/Craffft/secure-accessdata-bundle"
     },
     "require": {
-        "php": ">=5.4.0",
-        "contao/core-bundle": "~4.1"
+        "php": ">=7.1",
+        "contao/core-bundle": "~4.4"
+    },
+    "require-dev": {
+        "contao/manager-plugin": "^2.0"
     },
     "conflict": {
-        "contao/core": "*"
+        "contao/core": "*",
+        "contao/manager-plugin": "<2.0 || >=3.0"
+    },
+    "extra": {
+        "contao-manager-plugin": "Craffft\\SecureAccessdataBundle\\ContaoManager\\Plugin"
     },
     "autoload": {
         "psr-4": {
             "Craffft\\SecureAccessdataBundle\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-develop": "4.2.x-dev"
         }
     }
 }
